dynamically_typed_tests/invalid/expression/mixedOpTypeErr.wacc
# expresission type mismatch bool->int

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  b = 1 + 2 + true + 4 + 5
end
